--- a/manifests/app.yaml
+++ b/manifests/app.yaml
@@ -26,4 +26,38 @@ spec:
           mountPath: /tmp/data # הנתיב שבו האפליקציה מחפשת את הקובץ
       volumes:
       - name: task-data
-        emptyDir: {} # נתחיל עם זמני, אחר כך נהפוך לקבוע
+        emptyDir: {} #
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: task-service
+  namespace: devops
+spec:
+  selector:
+    app: task-app  # חשוב! זה חייב להיות בדיוק כמו ה-label ב-Deployment
+  ports:
+  - protocol: TCP
+    port: 80       # הפורט שה-Service יקשיב לו (הכתובת ה"חיצונית")
+    targetPort: 5000 # הפורט בתוך הקונטיינר (מה שרשמת ב-Python)
+  type: ClusterIP
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: task-ingress
+  namespace: devops
+  annotations:
+    kubernetes.io/ingress.class: nginx
+spec:
+  rules:
+  - host: tasks.local  # תוכל להוסיף כתובת חדשה ב-hosts של ווינדוס
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: task-service # השם של ה-Service שכתבנו קודם
+            port:
+              number: 80
