--- a/manifests/app.yaml
+++ b/manifests/app.yaml
@@ -28,7 +28,7 @@ spec:
       - name: task-data
         hostPath:
           path: /run/desktop/mnt/host/c/k8s-data # נתיב על המחשב שלך (כונן C)
-          type: DirectoryOrCreate
+          type: Directory
 ---
 apiVersion: v1
 kind: Service
