--- a/manifests/app.yaml
+++ b/manifests/app.yaml
@@ -27,8 +27,8 @@ spec:
       volumes:
       - name: task-data
         hostPath:
-          path: /d/k8s-data # נתיב על המחשב שלך (כונן C)
-          type: Directory
+          path: /run/desktop/mnt/host/d/k8s-data # כאן החלפנו מ-c ל-d
+          type: DirectoryOrCreate
 ---
 apiVersion: v1
 kind: Service
